[gd_scene load_steps=5 format=3 uid="uid://jci6rnroaq2m"]

[ext_resource type="Theme" uid="uid://fb64r7sbqq14" path="res://UI/UIResources/Style/GameTheme.tres" id="1_f5cc4"]
[ext_resource type="Script" path="res://UI/Scripts/SoundUI.gd" id="1_nmqxi"]
[ext_resource type="Texture2D" uid="uid://ln60073j7hxs" path="res://UI/UIResources/AtlasCutoffs/SoundTexture.tres" id="2_wl0k1"]
[ext_resource type="Texture2D" uid="uid://c888lpil38jmr" path="res://UI/UIResources/AtlasCutoffs/SoundOFFTexture.tres" id="3_d63np"]

[node name="SoundUI" type="VBoxContainer"]
auto_translate_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -203.0
offset_top = -412.0
offset_right = -105.0
offset_bottom = -197.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.72, 1.72)
size_flags_horizontal = 4
theme = ExtResource("1_f5cc4")
theme_override_constants/separation = 0
script = ExtResource("1_nmqxi")

[node name="VSlider" type="VSlider" parent="."]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 2.0
step = 0.05
value = 1.0

[node name="TextureButton" type="TextureButton" parent="."]
auto_translate_mode = 1
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_wl0k1")
texture_pressed = ExtResource("3_d63np")
stretch_mode = 5

[connection signal="value_changed" from="VSlider" to="." method="_on_v_slider_value_changed"]
[connection signal="toggled" from="TextureButton" to="." method="_on_texture_button_toggled"]
